# FaDIn

./: .gitignore  LICENSE  README.md  api.html  discretization.py  environment.yml  genindex.html  index.html  model.html  non_param.py  objects.inv  pyproject.toml  run_exp.py  run_rc_2.py  run_rc_plot.ipynb  search.html  searchindex.js  setup.py  sg_execution_times.html  test.ipynb  test_solver.py
.github/workflows/: deploy_site.yml  unit_tests.yml
Experiments/: plot_comp_autodiff.py  plot_erreur_discretisation.py  plot_error_discrete_EXP.py  plot_error_discrete_RC.py  plot_error_discrete_TG.py  plot_error_discretization.py  plot_error_stat.py  plot_exp_comparison.py  plot_fig1_appendix.py  plot_nonparam_comparison.py  run_comp_autodiff.py  run_erreur_discretisation.py  run_erreur_stat.py  run_error_discrete_EXP.py  run_error_discrete_RC.py  run_error_discrete_TG.py  run_error_discretization.py  run_error_stat.py  run_exp_comparison.py  run_nonparam_comparison.py
Experiments/results/: erreur_discret_tick.pkl  non_param.pkl
_downloads/1c3b32a31630f6e84287c7300eec1f0b/: plot_unhap.ipynb
_downloads/249f41bcacce2f11424e25d9f61ef920/: plot_multivariate_fadin.py
_downloads/4d9d8248607d7dfd1a6a1d91905ecec9/: plot_univariate_fadin.ipynb
_downloads/67a998d9a90beb3f5d2063ceaf5d9793/: univariate_fadin.ipynb
_downloads/7d7a8e420c1f3d1aa9252a6c29aa392a/: multivariate_fadin.ipynb
_downloads/c2c3793a8a8967a373b4b8286a57e617/: plot_multivariate_fadin.ipynb
_sources/: api.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  multivariate_fadin.rst.txt  plot_multivariate_fadin.rst.txt  plot_unhap.rst.txt  plot_univariate_fadin.rst.txt  sg_execution_times.rst.txt  univariate_fadin.rst.txt
_static/: documentation_options.js
auto_examples/: index.html  multivariate_fadin.html  plot_multivariate_fadin.html  plot_unhap.html  plot_univariate_fadin.html  sg_execution_times.html  univariate_fadin.html
doc/: api.rst  conf.py  index.rst  model.rst
doc/source/: api.rst  conf.py  examples.rst  index.rst  model.rst
examples/: README.txt  multivariate_fadin.py  plot_multivariate_fadin.py  plot_unhap.py  plot_univariate_fadin.py  univariate_fadin.py
experiments/: example_multivariate.py  example_univariate.py  plot_fig1.py  plot_fig1_appendix.py  plot_nonparam_comparison.py  run_benchmark.py  run_comp_autodiff.py  run_error_discrete_EXP.py  run_error_discrete_EXP_m.py  run_error_discrete_RC.py  run_error_discrete_RC_m.py  run_error_discrete_TG.py  run_error_discrete_TG_m.py  run_nonparam_comparison.py  run_time_dim.py
experiments/benchmark/: plot_benchmark.py  plot_comparison_ll.py  plot_nonparam_comparison.py  run_benchmark_exp.py  run_benchmark_rc.py  run_benchmark_tg.py  run_comparison_ll.py  run_nonparam_exp.py  run_nonparam_rc.py  run_nonparam_tg.py
experiments/inference_error/: plot_comp_time_dim.py  plot_fig1.py  plot_fig1_appendix.py  plot_fig1_appendix_m.py  plot_fig1_m.py  (+10 more)
fadin/: __init__.py  init.py  kernels.py  loss_and_gradient.py  loss_continuous.py  solver.py
hawkes_discret/: hawkes_discret_l2.py  kernels.py  loss_and_gradient.py  loss_continuous.py
(+32 files in other folders)
