[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fadin"
authors = [
  {name = "Guillaume Staerman"},
  {name = "Alexandre Gramfort"},
  {name = "Thomas Moreau"},
]
description = "Fast discretized Inference for Hawkes processes with General Parametric Kernels"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["python", "Hawkes", "Inference"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20",
    "torch>=1.11",
    "scipy>=1.8.0",
    "numba>=0.55.2",
    "matplotlib>=3.7.2"
]


[project.optional-dependencies]
test = [
    "flake8",
    "pytest>=7.2",
]

experiments = [
    "dicodile>=0.3",
    "vitaldb>=1.4.5",
    "alphacsc>=0.4.0",
    "pyhrv>=0.4.1",
    "biosppy>=2.2.3",
    "neurokit2>=0.2.7",
    "plotly>=6.2.0",
    "peakutils>=1.3.5",
]

doc = [
    "furo",
    "matplotlib",
    "numpydoc",
    "sphinx",
    "sphinx-gallery",
]

[project.urls]
homepage = "https://github.com/mind-inria/FaDIn"
repository = "https://github.com/mind-inria/FaDIn.git"

[tool.setuptools.packages.find]
include = ["fadin*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "fadin.__version__"}
